@startuml Stack

class Stack<T> {
  - elements : T[]
  - size : int
  - INITIAL_CAPACITY : int
  - resize(int newCapacity)

  + Stack()
  + push(T item)
  + pop()
  + toString()
  + toArray()
  + iterator()
  + isEmpty()
  + size()
}

class StackIterator {
  - current : int
  + hasNext()
  + next()
}

Stack "1" *-- "1" StackIterator : uses
Stack ..> Iterator : implements

@enduml
